k8s namespace option. properly expand root dir & kubeconfig path options

--- a/fabric-dev/.gitignore
+++ b/fabric-dev/.gitignore
@@ -5,3 +5,5 @@ testroot/channel-artifacts
 testroot/crypto-config
 testroot/config-artifacts
 testroot/kube-config
+testroot/short-config/*.config.yaml
+TAGS
