--- a/fabric-dev/testroot/short-config/cli.short.yaml
+++ b/fabric-dev/testroot/short-config/cli.short.yaml
@@ -1,7 +1,6 @@
 imports:
-- config: ./config/admin-peer0-org1.config.yaml
+- config: ./cli.config.yaml
 - deployment: ./cli.deployment.short.yaml
   params:
-    namespace: hltest
     config: ${config}
 deployment: ${deployment}
